# serializer version: 1
# name: test_aggregation_built_once_across_filter_and_order_by[session-tracked-async-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(*) AS fruits__count_fruits,
                 sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE anon_1.fruits__count_fruits > ?
   ORDER BY anon_1.fruits__count_fruits ASC,
            anon_1.sum_fruits__sum_sweetness ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_aggregation_built_once_across_filter_and_order_by[session-tracked-async-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(*) AS fruits__count_fruits,
                 sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE anon_1.fruits__count_fruits > %s
   ORDER BY anon_1.fruits__count_fruits ASC,
            anon_1.sum_fruits__sum_sweetness ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_aggregation_built_once_across_filter_and_order_by[session-tracked-async-asyncpg_engine]
  '''
  SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT count(*) AS fruits__count_fruits,
                 sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE anon_1.fruits__count_fruits > $1::INTEGER
   ORDER BY anon_1.fruits__count_fruits ASC,
            anon_1.sum_fruits__sum_sweetness ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_aggregation_built_once_across_filter_and_order_by[session-tracked-async-psycopg_async_engine]
  '''
  SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT count(*) AS fruits__count_fruits,
                 sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE anon_1.fruits__count_fruits > %(param_1)s::INTEGER
   ORDER BY anon_1.fruits__count_fruits ASC,
            anon_1.sum_fruits__sum_sweetness ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_aggregation_built_once_across_filter_and_order_by[session-tracked-sync-psycopg_engine]
  '''
  SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT count(*) AS fruits__count_fruits,
                 sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE anon_1.fruits__count_fruits > %(param_1)s::INTEGER
   ORDER BY anon_1.fruits__count_fruits ASC,
            anon_1.sum_fruits__sum_sweetness ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_aggregation_built_once_across_filter_and_order_by[session-tracked-sync-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(*) AS fruits__count_fruits,
                 sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE anon_1.fruits__count_fruits > ?
   ORDER BY anon_1.fruits__count_fruits ASC,
            anon_1.sum_fruits__sum_sweetness ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-float-avg-eq-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.avg_fruits__avg_water_percent = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-float-avg-eq-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.avg_fruits__avg_water_percent = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-float-avg-eq-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.avg_fruits__avg_water_percent = $1::FLOAT
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-float-avg-eq-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.avg_fruits__avg_water_percent = %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-float-avg-gt-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.avg_fruits__avg_water_percent > ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-float-avg-gt-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.avg_fruits__avg_water_percent > %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-float-avg-gt-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.avg_fruits__avg_water_percent > $1::FLOAT
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-float-avg-gt-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.avg_fruits__avg_water_percent > %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-int-avg-eq-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.sweetness) AS avg_fruits__avg_sweetness,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.avg_fruits__avg_sweetness = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-int-avg-eq-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.sweetness) AS avg_fruits__avg_sweetness,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.avg_fruits__avg_sweetness = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-int-avg-eq-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.sweetness) AS avg_fruits__avg_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.avg_fruits__avg_sweetness = $1::FLOAT
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-int-avg-eq-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.sweetness) AS avg_fruits__avg_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.avg_fruits__avg_sweetness = %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-int-avg-gt-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.sweetness) AS avg_fruits__avg_sweetness,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.avg_fruits__avg_sweetness > ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-int-avg-gt-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.sweetness) AS avg_fruits__avg_sweetness,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.avg_fruits__avg_sweetness > %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-int-avg-gt-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.sweetness) AS avg_fruits__avg_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.avg_fruits__avg_sweetness > $1::FLOAT
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-int-avg-gt-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.sweetness) AS avg_fruits__avg_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.avg_fruits__avg_sweetness > %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-sync-float-avg-eq-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.avg_fruits__avg_water_percent = %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-sync-float-avg-eq-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.avg_fruits__avg_water_percent = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-sync-float-avg-gt-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.avg_fruits__avg_water_percent > %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-sync-float-avg-gt-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.avg_fruits__avg_water_percent > ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-sync-int-avg-eq-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.sweetness) AS avg_fruits__avg_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.avg_fruits__avg_sweetness = %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-sync-int-avg-eq-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.sweetness) AS avg_fruits__avg_sweetness,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.avg_fruits__avg_sweetness = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-sync-int-avg-gt-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.sweetness) AS avg_fruits__avg_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.avg_fruits__avg_sweetness > %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-sync-int-avg-gt-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.sweetness) AS avg_fruits__avg_sweetness,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.avg_fruits__avg_sweetness > ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-eq-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_fruits__count_id,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_id = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-eq-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_fruits__count_id,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_id = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-eq-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_id = $1::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-eq-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_id = %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-gt-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_fruits__count_id,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_id > ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-gt-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_fruits__count_id,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_id > %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-gt-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_id > $1::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-gt-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_id > %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-gte-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_fruits__count_id,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_id >= ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-gte-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_fruits__count_id,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_id >= %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-gte-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_id >= $1::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-gte-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_id >= %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-in-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_fruits__count_id,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_id IN (__[POSTCOMPILE_param_1])
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-in-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_fruits__count_id,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_id IN (__[POSTCOMPILE_param_1])
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-in-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_id IN (__[POSTCOMPILE_param_1])
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-in-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_id IN (__[POSTCOMPILE_param_1])
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-lt-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_fruits__count_id,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_id < ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-lt-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_fruits__count_id,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_id < %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-lt-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_id < $1::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-lt-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_id < %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-lte-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_fruits__count_id,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_id <= ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-lte-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_fruits__count_id,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_id <= %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-lte-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_id <= $1::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-lte-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_id <= %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-neq-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_fruits__count_id,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_id != ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-neq-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_fruits__count_id,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_id != %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-neq-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_id != $1::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-neq-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_id != %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-nin-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_fruits__count_id,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.count_fruits__count_id NOT IN (__[POSTCOMPILE_param_1]))
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-nin-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_fruits__count_id,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.count_fruits__count_id NOT IN (__[POSTCOMPILE_param_1]))
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-nin-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.count_fruits__count_id NOT IN (__[POSTCOMPILE_param_1]))
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-nin-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.count_fruits__count_id NOT IN (__[POSTCOMPILE_param_1]))
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-sync-eq-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_id = %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-sync-eq-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_fruits__count_id,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_id = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-sync-gt-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_id > %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-sync-gt-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_fruits__count_id,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_id > ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-sync-gte-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_id >= %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-sync-gte-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_fruits__count_id,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_id >= ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-sync-in-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_id IN (__[POSTCOMPILE_param_1])
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-sync-in-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_fruits__count_id,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_id IN (__[POSTCOMPILE_param_1])
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-sync-lt-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_id < %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-sync-lt-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_fruits__count_id,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_id < ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-sync-lte-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_id <= %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-sync-lte-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_fruits__count_id,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_id <= ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-sync-neq-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_id != %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-sync-neq-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_fruits__count_id,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_id != ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-sync-nin-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.count_fruits__count_id NOT IN (__[POSTCOMPILE_param_1]))
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-sync-nin-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_fruits__count_id,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.count_fruits__count_id NOT IN (__[POSTCOMPILE_param_1]))
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_nested_under_or[session-tracked-async-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(*) AS fruits__count_fruits,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE anon_1.fruits__count_fruits > ?
   ORDER BY color.id ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_count_aggregation_filter_nested_under_or[session-tracked-async-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(*) AS fruits__count_fruits,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE anon_1.fruits__count_fruits > %s
   ORDER BY color.id ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_count_aggregation_filter_nested_under_or[session-tracked-async-asyncpg_engine]
  '''
  SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT count(*) AS fruits__count_fruits
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE anon_1.fruits__count_fruits > $1::INTEGER
   ORDER BY color.id ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_count_aggregation_filter_nested_under_or[session-tracked-async-psycopg_async_engine]
  '''
  SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT count(*) AS fruits__count_fruits
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE anon_1.fruits__count_fruits > %(param_1)s::INTEGER
   ORDER BY color.id ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_count_aggregation_filter_nested_under_or[session-tracked-sync-psycopg_engine]
  '''
  SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT count(*) AS fruits__count_fruits
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE anon_1.fruits__count_fruits > %(param_1)s::INTEGER
   ORDER BY color.id ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_count_aggregation_filter_nested_under_or[session-tracked-sync-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(*) AS fruits__count_fruits,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE anon_1.fruits__count_fruits > ?
   ORDER BY color.id ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-async-default-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.name) AS count_fruits__count_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_name = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-async-default-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.name) AS count_fruits__count_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_name = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-async-default-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_name = $1::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-async-default-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_name = %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-async-distinct-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(DISTINCT fruit_1.name) AS count_fruits__count_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_name = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-async-distinct-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(DISTINCT fruit_1.name) AS count_fruits__count_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_name = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-async-distinct-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(DISTINCT fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_name = $1::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-async-distinct-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(DISTINCT fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_name = %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-async-non-distinct-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.name) AS count_fruits__count_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_name = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-async-non-distinct-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.name) AS count_fruits__count_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_name = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-async-non-distinct-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_name = $1::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-async-non-distinct-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_name = %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-sync-default-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_name = %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-sync-default-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.name) AS count_fruits__count_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_name = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-sync-distinct-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(DISTINCT fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_name = %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-sync-distinct-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(DISTINCT fruit_1.name) AS count_fruits__count_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_name = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-sync-non-distinct-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_fruits__count_name = %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-sync-non-distinct-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.name) AS count_fruits__count_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_fruits__count_name = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-contains-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_fruits__max_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.max_fruits__max_name LIKE '%' || ? || '%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-contains-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_fruits__max_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.max_fruits__max_name LIKE concat('%%', %s, '%%') ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-contains-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.max_fruits__max_name LIKE '%' || $1::VARCHAR || '%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-contains-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.max_fruits__max_name LIKE '%%' || %(param_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-eq-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_fruits__max_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.max_fruits__max_name = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-eq-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_fruits__max_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.max_fruits__max_name = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-eq-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.max_fruits__max_name = $1::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-eq-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.max_fruits__max_name = %(param_1)s::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-ilike-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_fruits__max_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE lower(anon_1.max_fruits__max_name) LIKE lower(?)
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-ilike-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_fruits__max_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE lower(anon_1.max_fruits__max_name) LIKE lower(%s)
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-ilike-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.max_fruits__max_name ILIKE $1::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-ilike-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.max_fruits__max_name ILIKE %(param_1)s::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-like-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_fruits__max_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.max_fruits__max_name LIKE ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-like-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_fruits__max_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.max_fruits__max_name LIKE %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-like-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.max_fruits__max_name LIKE $1::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-like-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.max_fruits__max_name LIKE %(param_1)s::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-startswith-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_fruits__max_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.max_fruits__max_name LIKE ? || '%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-startswith-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_fruits__max_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.max_fruits__max_name LIKE concat(%s, '%%') ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-startswith-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.max_fruits__max_name LIKE $1::VARCHAR || '%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-startswith-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.max_fruits__max_name LIKE %(param_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-sync-contains-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.max_fruits__max_name LIKE '%%' || %(param_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-sync-contains-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_fruits__max_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.max_fruits__max_name LIKE '%' || ? || '%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-sync-eq-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.max_fruits__max_name = %(param_1)s::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-sync-eq-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_fruits__max_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.max_fruits__max_name = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-sync-ilike-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.max_fruits__max_name ILIKE %(param_1)s::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-sync-ilike-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_fruits__max_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE lower(anon_1.max_fruits__max_name) LIKE lower(?)
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-sync-like-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.max_fruits__max_name LIKE %(param_1)s::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-sync-like-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_fruits__max_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.max_fruits__max_name LIKE ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-sync-startswith-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.max_fruits__max_name LIKE %(param_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-sync-startswith-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_fruits__max_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.max_fruits__max_name LIKE ? || '%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-contains-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_fruits__min_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.min_fruits__min_name LIKE '%' || ? || '%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-contains-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_fruits__min_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.min_fruits__min_name LIKE concat('%%', %s, '%%') ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-contains-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.min_fruits__min_name LIKE '%' || $1::VARCHAR || '%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-contains-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.min_fruits__min_name LIKE '%%' || %(param_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-eq-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_fruits__min_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.min_fruits__min_name = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-eq-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_fruits__min_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.min_fruits__min_name = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-eq-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.min_fruits__min_name = $1::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-eq-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.min_fruits__min_name = %(param_1)s::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-ilike-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_fruits__min_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE lower(anon_1.min_fruits__min_name) LIKE lower(?)
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-ilike-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_fruits__min_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE lower(anon_1.min_fruits__min_name) LIKE lower(%s)
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-ilike-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.min_fruits__min_name ILIKE $1::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-ilike-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.min_fruits__min_name ILIKE %(param_1)s::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-like-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_fruits__min_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.min_fruits__min_name LIKE ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-like-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_fruits__min_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.min_fruits__min_name LIKE %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-like-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.min_fruits__min_name LIKE $1::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-like-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.min_fruits__min_name LIKE %(param_1)s::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-startswith-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_fruits__min_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.min_fruits__min_name LIKE ? || '%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-startswith-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_fruits__min_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.min_fruits__min_name LIKE concat(%s, '%%') ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-startswith-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.min_fruits__min_name LIKE $1::VARCHAR || '%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-startswith-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.min_fruits__min_name LIKE %(param_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-sync-contains-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.min_fruits__min_name LIKE '%%' || %(param_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-sync-contains-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_fruits__min_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.min_fruits__min_name LIKE '%' || ? || '%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-sync-eq-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.min_fruits__min_name = %(param_1)s::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-sync-eq-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_fruits__min_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.min_fruits__min_name = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-sync-ilike-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.min_fruits__min_name ILIKE %(param_1)s::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-sync-ilike-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_fruits__min_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE lower(anon_1.min_fruits__min_name) LIKE lower(?)
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-sync-like-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.min_fruits__min_name LIKE %(param_1)s::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-sync-like-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_fruits__min_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.min_fruits__min_name LIKE ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-sync-startswith-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.min_fruits__min_name LIKE %(param_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-sync-startswith-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_fruits__min_name,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.min_fruits__min_name LIKE ? || '%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-float-eq-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_fruits__sum_water_percent = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-float-eq-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_fruits__sum_water_percent = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-float-eq-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_fruits__sum_water_percent = $1::FLOAT
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-float-eq-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_fruits__sum_water_percent = %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-float-gt-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_fruits__sum_water_percent > ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-float-gt-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_fruits__sum_water_percent > %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-float-gt-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_fruits__sum_water_percent > $1::FLOAT
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-float-gt-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_fruits__sum_water_percent > %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-int-eq-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_fruits__sum_sweetness = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-int-eq-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_fruits__sum_sweetness = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-int-eq-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_fruits__sum_sweetness = $1::FLOAT
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-int-eq-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_fruits__sum_sweetness = %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-int-gt-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_fruits__sum_sweetness > ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-int-gt-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_fruits__sum_sweetness > %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-int-gt-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_fruits__sum_sweetness > $1::FLOAT
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-int-gt-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_fruits__sum_sweetness > %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-sync-float-eq-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_fruits__sum_water_percent = %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-sync-float-eq-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_fruits__sum_water_percent = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-sync-float-gt-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_fruits__sum_water_percent > %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-sync-float-gt-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_fruits__sum_water_percent > ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-sync-int-eq-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_fruits__sum_sweetness = %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-sync-int-eq-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_fruits__sum_sweetness = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-sync-int-gt-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_fruits__sum_sweetness > %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-sync-int-gt-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_fruits__sum_sweetness > ?
   ORDER BY color.id ASC
  '''
# ---
